--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ google-auth-oauthlib = "*"
 httplib2 = "*"
 oauth2client = "*"
 apiclient = "*"
-
+google-api-python-client = "*"
 
 [dev-packages]
 
