separate folder to read camera captured files

--- a/configuration.properties
+++ b/configuration.properties
@@ -7,3 +7,6 @@ sender = Pi3Photo
 subject = Photo Alert!
 message_text = Hello, this is a photo alert!
 user_id = me
+
+[file]
+folder = camera-files
